2011-02-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        allow for modifying comments without the mouse
        https://bugs.webkit.org/show_bug.cgi?id=54433

        Use n/p to navigate the comments.
        Enter to begin editing a comment.
        Escape to finish editing a comment.

        * code-review.js:

2011-02-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        improve line selection in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=54430

        -shift+click now extends the comment context
        -selecting outside of a diff section no longer clears the selected lines.
         Instead it just restricts the selected lines to that diff section.

        * code-review.js:

2011-02-10  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        remove extra space from expansion lines
        https://bugs.webkit.org/show_bug.cgi?id=54266

        * code-review.js:

2011-02-09  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        only erase draft comments after publish is successful
        https://bugs.webkit.org/show_bug.cgi?id=54163

        If there is a conflict or 500, then draft comments will survive.
        One drawback here is that the form post is now to the iframe,
        so to break out of the iframe we redirect to the bug page, which
        loses the information of who the email was sent to.

        Once WebKit supports seamless iframes we should be able to avoid
        the redirect.

        * code-review.js:

2011-02-09  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        save overall comments when saving drafts in the review tool
        https://bugs.webkit.org/show_bug.cgi?id=54165

        -save overall comments in localstorage as well
        -save all draft comments as you type
        -give a *subtle* indicator of saved state

        The latter should also make it super easy if someone wanted to do